fix: bg color and align bloc

--- a/framework/src/scss/components/_maincontent.scss
+++ b/framework/src/scss/components/_maincontent.scss
@@ -1,7 +1,7 @@
 .main-content {
 	background-color: #E5E5E5;
 	width: calc(100% - 250px);
-	
+	height: 100%;
 	margin-left: 250px;
 	padding: 20px 30px;
 }
@@ -41,7 +41,7 @@
 	text-align: center;
 	border: none;
 	width: 33%; 
-	margin: 10% 5px 5px 5px;
+	margin: 20px 5px 5px 5px;
 	height:120px; 
 	border-radius: 25px;
 	background-color: #FFFFFF;
@@ -51,8 +51,8 @@
 	flex-grow: 1;
 	text-align: center;
 	border: none;
-	margin-top: 40px;
-	height: 350px;
+	margin-top: 10px;
+	height: 300px;
 	border-radius: 25px;
 	background-color: #FFFFFF;
 	box-shadow: 2px 4px 3px grey;
@@ -61,8 +61,8 @@
 	flex-grow: 1;
 	text-align: center;
 	border: none;
-	margin-top: 40px;
-	height: 350px;
+	margin-top: 10px;
+	height: 300px;
 	border-radius: 25px;
 	background-color: #FFFFFF;
 	box-shadow: 2px 4px 3px grey;
@@ -71,8 +71,8 @@
 	flex-grow: 1;
 	text-align: center;
 	border: none;
-	margin-top: 40px;
-	height: 350px;
+	margin-top: 10px;
+	height: 300px;
 	border-radius: 25px;
 	background-color: #FFFFFF;
 	box-shadow: 2px 4px 3px grey;
@@ -83,4 +83,7 @@
 	flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-around;
+}
+.background{
+	background-color: #E5E5E5;
 }
